@@ -2,6 +2,7 @@
 @import "mixins/button";
 @import "mixins/box-shadow";
 @import "mixins/breakpoint";
+@import "mixins/centerer";
 @import "mixins/clearfix";
 @import "mixins/flip";
 @import "mixins/grid-framework";
@@ -17,4 +18,3 @@
 @import "mixins/responsive-ratio";
 @import "mixins/triangle";
 @import "mixins/truncate";
-@import "mixins/vertical-align";
