@@ -1,8 +1,0 @@
-// Vertical align
-//––––––––––––––––––––––––––––––––––––––––––––––––––
-
-@mixin vertical-align($position: relative) {
-    position: $position;
-    top: 50%;
-    transform: translateY(-50%);
-}
